manage document satus